css/main.css
/* ... */
@media screen and (max-width: 620px) {
  .checkout_product_info {
    padding: 5% 0;
  }
}

@media screen and (max-width: 600px) {
  #featured_products .block {
    width: 38%;
  }

  .featured-title {
    text-align: center;
  }

  .mobile-links {
    width: 90%;
  }
}

@media screen and (max-width: 590px) {
  .footer_copyright .content_container {
    text-align: center;
  }
}

@media screen and (max-width: 575px) {
  .block {
    width: 90%;
  }

  .content_container #featured_products {
    justify-content: center;
    margin: 0;
    width: 100%;
  }

  #featured_products .block {
    width: 45%;
    margin: 0.5rem;
  }

  #featured_products .product_name {
    font-size: 1.2rem;
  }

  .featured-title {
    text-align: center;
  }
}

@media screen and (max-width: 515px) {
  .checkout_product_info {
    padding: 2% 0;
  }

  .checkout_product_name {
    font-size: 0.9rem;
  }
}

@media screen and (min-width: 414px) {
  #side_product_filters {
    display: block;
  }

  #dropdown_product_filters {
    display: none;
  }
}

@media screen and (max-width: 414px) {
  #side_product_filters {
    display: none;
  }

  #dropdown_product_filters {
    display: block;
  }
}

/* Mobile View */
@media screen and (max-width: 375px) { /* 414px */
  .block {
    width: 100%;
  }

  #multiple_products .block {
    width: 90%;
  }

  .content_container {
    margin: 0;
    width: 100%;
  }

  .mobile-links {
    width: 86%;
  }

  #main_footer {
    flex-direction: column;
    width: 100%;
  }

  .footer-items-form {
    flex-direction: column;
  }

  #subscribe-news-input, #subscribe-news-btn {
    width: 100%;
    text-align: center;
    margin: 0;
  }

  #subscribe-news-btn {
    margin-top: 0.5rem;
  }

  #main_footer #footer-newsletter, #main_footer #footer-nav {
    width: 100%;
  }

  #main_footer #footer-newsletter .block, #main_footer #footer-nav .block {
    width: 100%;
  }

  .footer-social-media ul.icon_lists {
    text-align: left;
  }

  #featured_products .block {
    width: 44%;
    margin: 0.5rem;
  }

  .product_image {
    width: 100%;
    margin-bottom: 2rem;
  }

  .product_name {
    font-size: 1.5rem;
  }

  .price {
    font-size: 0.85rem;
  }

  .product_details {
    width: 100%;
    margin-top: -2.5rem;
  }

  .product_select {
    width: 8rem;
  }

  .atc-btn {
    width: 100%;
    text-align: center;
    margin-bottom: 3rem;
  }

  .checkout_prod_img {
    width: 45%;
    height: 45%;
    padding: 0.5rem;
    vertical-align: center;
  }

  .checkout_product_info {
    padding: 0;
    width: 100%;
  }

  .checkout_product_color {
    font-size: 0.6rem;
  }

  .checkout_quantity, .checkout_price {
    width: 1rem;
  }

  #payment_order_form .block {
    margin: 60px 0 0 0;
    width: 100%;
  }

  .main_nav_item {
    font-size: 0.6rem;
  }

  .brand-imagery img {
    width: 40%;
  }

  iframe{
    width: auto;
    height: auto;
  }

}


/* Extra @media setting for journal.html, journal_detail.html, and about.html */

@media screen and (max-width: 1199px) {
    /* responsive for journal */
    .items-text {
      background-size: 70%;
    }

    .items-text h1 {
      margin-top: -21rem;
    }

    .items-text img {
      margin-top: -60rem;
    }

    #journal{
      margin-top: -15rem;
    }

    .main_journal{
      margin-bottom: 5rem;
    }
}

@media screen and (max-width: 1024px) {
    /* responsive for journal */
    .items-text {
      background-size: 80%;
    }

    .items-text img {
      margin-top: -60rem;
    }

    #journal{
      margin-top: -40rem;
    }
}

@media screen and (max-width: 959px){
  /* responsive for about */

  /* responsive for journal */
  .items-text {
    background-size: 70%;
  }

  .items-text h1 {
    margin-top: -15rem;
    font-size: 15vw;;
  }

  .items-text img {
    margin-top: -50rem;
    left: 10%;
  }

  #journal{
    margin-top: -25rem;
  }

/* responsive for journal article*/

  #article {
    display: grid;
  	grid-template-columns: 1% 30% 50%;
    margin-top: 10vw;
  }

  .article-image-items p{
   font-size: .5vw;
  }

  .article-image-items h1{
    font-size:5vw;
  }
  .article-image-items h5{
    font-size:1vw;
  }
  .ariticle-title {
    padding-right: 0px;
  }
  #author{
    display: none;
  }
}

@media screen and (max-width: 768px) {
    /* responsive for journal */
    .items-text h1 {
      margin-top: -18rem;
    }

    .items-text img {
      margin-top: -50rem;
    }

    #journal{
      margin-top: -35rem;
    }

    /* responsive for journal article*/

}


@media screen and (max-width: 414px){
  /* responsive for about */
  #about {
      display: block;
  }

  #about-detail p{
    font-size: 12px;
  }

  #about-img-item img{
    width:300px;
    height: 150px;
  }

  .about-header h2{
    font-size:36px;
    text-align: center;
  }

  .about-header h4{
    text-align: center;
  }

  #about-detail img{
    margin-top: 1vw;
  }

  ul.icon_lists{
    text-align: center;
  }

  /* responsive for journal */
  .items-text {
    background-size: 88%;
    margin-top: 3rem;
  }

  .items-text h1 {
    margin-top: -17rem;
    margin-left: -50px;
  }

  .items-text img {
    display: none;
  }

  #journal{
    margin-top: -30rem;
  }

  .main_journal{
    display: flex;
    flex-wrap: wrap;
    margin-bottom: 0;
  }

  /* responsive for journal article*/

  #article{
     display: block;
     margin: 20vw;
   }

  #square {
    width: 100%;
    height: 20vh;
  }

  .article-image-items{
    margin-top: -6rem;
  }

  .article-image-items h1{
    padding-left: 2vw;
    padding-right: 2vw;
  }

  .article-image-items h5{
    display: none;
  }

  .article-image{
    margin-top: 15vw;
  }
  .article-image img{
    display: inline-block;
    width: 25vw;
    height: 20vw;
    margin-right: 4vw;
  }

  .ariticle-title p{
    margin-top: 10vw;
  }

   .ariticle-title {
    margin-bottom: 40vw;
   }
   #author{
     display: none;
   }
}
/* ... */

